Implement of IDT and custom interrupts system + some changes in GDT, Makefile and stddef.h

--- a/env/makefile
+++ b/env/makefile
@@ -1,16 +1,19 @@
 
-CEMU=-m32	
+CEMU=-m32
 CSTD=c11
 LDEMU=-melf_i386
 
 
 CCFLAGS = -std=$(CSTD) -I$(FROOT)/include -I$(FROOT)/systems -ffreestanding -nostdlib -nostdinc -fno-builtin -fno-exceptions -fno-leading-underscore -fno-pic
-CCFLAGS += -W -Wall -Wno-unused-parameter -Wno-type-limits -Wno-parentheses -Wno-unused-variable -Wno-maybe-uninitialized -Wno-return-local-addr -Wno-return-type
+CCFLAGS += -W -Wall -Wno-unused-parameter -Wno-type-limits -Wno-parentheses -Wno-unused-variable -Wno-maybe-uninitialized -Wno-return-local-addr -Wno-return-type -Wno-comment
+TEMUFLAGS= -M pc-i440fx-2.8
+TEMURUNCMD=-kernel $(FROOT)/DepthOS.elf
 BINCROOT ?= /bin
 FROOT ?=.
 CC = $(BINCROOT)/i686-elf-gcc
 ASC = $(BINCROOT)/i686-elf-as
 LD = $(BINCROOT)/i686-elf-ld
+TEMU=qemu-system-i386
 
 # CSOURCES = $(FROOT)/main.c
 # ASMSOURCES = $(FROOT)/bootloader.S
@@ -23,6 +26,13 @@ LD = $(BINCROOT)/i686-elf-ld
 CSOURCES += $(shell find $(FROOT) -name "*.c" -o -name "*.cc")
 ASMSOURCES += $(shell find $(FROOT) -name "*.s" -o -name "*.S")
 
+.PHONY: all clean
+
+clean:
+	@echo -- Removing cache files --
+	rm -f ./*.o
+	rm -f ./*.bin
+	rm -f ./*.elf
 
 build: $(CSOURCES) $(ASMSOURCES)
 	@echo ------ Build ------
@@ -41,5 +51,5 @@ build: $(CSOURCES) $(ASMSOURCES)
 	@cp $(FROOT)/build/DepthOS.bin $(FROOT)/DepthOS.elf
 
 test: $(FROOT)/DepthOS.elf
-	qemu-system-i386 -M pc-i440fx-2.8 -kernel $(FROOT)/DepthOS.elf
+	$(TEMU) $(TEMUFLAGS) $(TEMURUNCMD)
 all: build test
